[package]
name = "neuro-ar-wasm"
version = "0.1.0"
authors = ["Roman Bokhonko <nesanya1990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2"
