[package]
name = "neuro-ar-wasm"
version = "0.1.0"
authors = ["Roman Bokhonko <nesanya1990@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.6"
js-sys = "0.3.50"

[dependencies.web-sys]
version = "0.3.50"
features = [
    "Window", 
    "Navigator",
    "Bluetooth"
]